set the two icons and the image using float

--- a/secondDay/index.html
+++ b/secondDay/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link type="text/css" rel="stylesheet" href="styles/stylesheets.css">
 	</head>
 	<body>
-		<h3>Let's make a webpage!</h3>
-		<h3>The image assets you need to create the page below can be found in the <a href="assets">asset directory</a></h3>
-		<img src="big.png">
+		<div id="container">
+			<div id="left">
+				<img src="assets/sprint.svg">
+			</div>
+			<div id="right">
+				<img src="assets/hamburgermenu.svg">
+			</div>
+		</div>
+		<div id="bigPic">
+				<img src="assets/reichstag.jpg">
+		</div>
 	</body>
 </html>
