delete the files

--- a/secondDay/index.html
+++ b/secondDay/index.html
@@ -15,5 +15,19 @@
 		<div id="bigPic">
 				<img src="assets/reichstag.jpg">
 		</div>
+		<div id='secondContainer'>
+			<div id='cat'>
+				<img src="assets/cat.svg">
+			</div>
+			<div id='world'>
+				<img src="assets/world.svg">
+			</div>
+			<div id='warmUP'>
+				<img src="assets/swim.svg">
+			</div>
+			<div id='noLimits'>
+				<img src="assets/columns.svg">
+			</div>
+		</div>	
 	</body>
 </html>
