add texts and get started button

--- a/fifthDay/index.html
+++ b/fifthDay/index.html
@@ -16,6 +16,8 @@
 		<div id="bigPic">
 				<div id='overlay'>
 				</div>
+				<div id='welcomeToBerlin'>Welcome to Berlin and the Future</div>
+				<div id='getStarted'><p>Get Started</p></div>
 				<img src="assets/reichstag.jpg" alt="Picture of Reichtstag building">
 		</div>
 
@@ -74,6 +76,7 @@
 		</div>
 		</div>
 		<div id="copyRight">
-			<p>c 2016 Some Organization</p>
+			<p>&copy; 2016 Some Organization</p>
+		</div>
 	</body>
 </html>
