solve two exercises Done by obay and Moaaz

--- a/fifthDay/index.html
+++ b/fifthDay/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<link type="text/css" rel="stylesheet" href="styles/stylesheets.css">
 	</head>
 	<body>
@@ -16,7 +17,7 @@
 		<div id="bigPic">
 				<div id='overlay'>
 				</div>
-				<div id='welcomeToBerlin'>Welcome to Berlin and the Future</div>
+				<div id='welcomeToBerlin'><strong>Welcome to Berlin and the Future</strong></div>
 				<div id='getStarted'><p>Get Started</p></div>
 				<img src="assets/reichstag.jpg" alt="Picture of Reichtstag building">
 		</div>
@@ -76,7 +77,7 @@
 		</div>
 		</div>
 		<div id="copyRight">
-			<p>&copy; 2016 Some Organization</p>
+			<p>&copy;1 2016 Some Organization</p>
 		</div>
 	</body>
 </html>
