make the design responsive Done By Obay and Moaz

--- a/fifthDay/index.html
+++ b/fifthDay/index.html
@@ -29,10 +29,9 @@
 					<img src='assets/cat.svg'>
 				</div>
 				<div class='pAndH3'>
-				<h3>hello world</h3>
-				<p>kjjfs djs jkfjdskj fksjdk jfksdj fjsd;
-					f sdjflksdj jfsdj fjsd
-					 sdjlk jsdfksdj fs fsd</p>
+				<h3>Best-in-class features</h3>
+				<p>No body does this stuff better than us. You
+				  can bet your life on that.</p>
 				 </div>
 			</div>
 		</div>
@@ -42,10 +41,9 @@
 					<img src='assets/world.svg'>
 				</div>
 				<div class='pAndH3'>
-				<h3>hello world</h3>
-				<p>kjjfs djs jkfjdskj fksjdk jfksdj fjsd;
-					f sdjflksdj jfsdj fjsd
-					 sdjlk jsdfksdj fs fsd</p>
+				<h3>Reliable service</h3>
+				<p>You can count on us to help you whenever you need help. We are
+				  talking round the clock service.</p>
 				 </div>
 			</div>
 		</div>
@@ -55,10 +53,9 @@
 					<img src='assets/columns.svg'>
 				</div>
 				<div class='pAndH3'>
-				<h3>hello world</h3>
-				<p>kjjfs djs jkfjdskj fksjdk jfksdj fjsd;
-					f sdjflksdj jfsdj fjsd
-					 sdjlk jsdfksdj fs fsd</p>
+				<h3>An acquired Taste</h3>
+				<p>It may take a little while for you to warm up to us. But
+				  when you do you will never need to switch.</p>
 				 </div>
 			</div>
 		</div>
@@ -68,10 +65,8 @@
 					<img src='assets/swim.svg'>
 				</div>
 				<div class='pAndH3'>
-				<h3>hello world</h3>
-				<p>kjjfs djs jkfjdskj fksjdk jfksdj fjsd;
-					f sdjflksdj jfsdj fjsd
-					 sdjlk jsdfksdj fs fsd</p>
+				<h3>No Limits</h3>
+				<p>There are absolutly no limits. We do not throttle. We do not cap.</p>
 				 </div>
 			</div>
 		</div>
