move the photos from the right to te left using setTImeout method

--- a/sixthDay/wk2_carousel/index.html
+++ b/sixthDay/wk2_carousel/index.html
@@ -9,5 +9,17 @@
       <div id='kity2'></div>
       <div id='kity3'></div>
     </div>
+    <script>
+      var kity1 = document.getElementById('kity1');
+      var kity2 = document.getElementById('kity2');
+      var kity3 = document.getElementById('kity3');
+      var classes = ['onLeft', 'onScreen', 'standBy'];
+      function switchClass(obj, newClass) {
+        obj.classList.remove(obj.classList[0]);
+        if ( classes.indexOf(obj.classList[0]))
+        obj.classList.add(classes(indexOf(obj.classList[0] + 1);
+      }
+
+    </script>
   </body>
 </html>
